--- a/04/bootloader/Makefile
+++ b/04/bootloader/Makefile
@@ -19,7 +19,7 @@ H8WRITE = $(BINDIR)/h8write
 H8WRITE_SETDEV = /dev/ttyUSB0
 
 OBJS = vector.o startup.o main.o
-OBJS += lib.o serial.o
+OBJS += lib.o serial.o xmodem.o
 
 TARGET = kzload
 
