--- a/07/bootloader/Makefile
+++ b/07/bootloader/Makefile
@@ -18,7 +18,7 @@ H8WRITE = $(BINDIR)/h8write
 
 H8WRITE_SETDEV = /dev/ttyUSB0
 
-OBJS = vector.o startup.o main.o
+OBJS = vector.o startup.o intr.o main.o interrupt.o
 OBJS += lib.o serial.o xmodem.o elf.o
 
 TARGET = kzload
