--- a/10/os/Makefile
+++ b/10/os/Makefile
@@ -16,7 +16,9 @@ STRIP = $(BINDIR)/$(ADDNAME)strip
 
 OBJS = startup.o main.o interrupt.o
 OBJS += lib.o serial.o
-OBJS += kozos.o syscall.o memory.o test10_1.o
+OBJS += kozos.o syscall.o memory.o
+#OBJS += test09_1.o test09_2.o test09_3.o
+OBJS += test10_1.o
 
 TARGET = kozos
 
